# libhermit-kata-agent

./: CMakeLists.txt  README.md  main.c  wamr.c
